--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.0",
     "ejs": "^3.1.10",
     "express": "^4.19.0",
+    "express-session": "^1.18.0",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "xlsx": "^0.18.5"
